5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4487/executions/1633_2923.log
== TEST (2019-04-02 18:20:35) 
-- CODE:
qf=q0*(1+j)t
-- ERROR:
File "XXXX", line 1
    qf=q0*(1+j)t
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:23:01) 
-- CODE:
med_dos_lab
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    med_dos_lab
NameError: name 'med_dos_lab' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:26:12) 
-- CODE:
med_dos_lab=t
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    med_dos_lab=t
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
